----------------------------------------------------------------------
Fri Apr 26 15:24:02 2002                        Michael Jennings (mej)

I spoke too soon....
----------------------------------------------------------------------
Mon Apr 29 15:25:01 2002                        Michael Jennings (mej)

The options parser seems to be working now.  It's fairly extensible
and fixes a lot of the problems with the old one.  It was rewritten
more or less from scratch.
----------------------------------------------------------------------
Tue Apr 30 22:17:27 2002                        Michael Jennings (mej)

I really should be more careful when creating test cases.  This
should fix the parsing of boolean options with values.
----------------------------------------------------------------------
Wed May  1 23:21:23 2002                        Michael Jennings (mej)

Fleshed out the URL class.
----------------------------------------------------------------------
Tue May  7 16:37:40 2002                        Michael Jennings (mej)

A few small bugfixes and some touchups.  Also work on the socket
object.
----------------------------------------------------------------------
Tue May 21 00:15:37 2002                        Michael Jennings (mej)

Fixed a number of memory leaks in both the testing code and the object
classes themselves.

Also rearranged some header stuff and created a few new helper macros
for object declarations.
----------------------------------------------------------------------
Wed May 22 00:16:31 2002                        Michael Jennings (mej)

Brought the performance tests up to date and cleaned up some memory
leaks in them.
----------------------------------------------------------------------
Wed May 22 08:59:38 2002                        Michael Jennings (mej)

Stupid typo.  Doing too much perl, I guess.  cpp uses "#elif," not
"#elsif."
----------------------------------------------------------------------